--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "java.compile.nullAnalysis.mode": "automatic",
     "cSpell.words": [
         "Afacad",
-        "dimplespay"
+        "dimplespay",
+        "topup"
     ]
 }
